fixed bug with shift to the right downwards

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,18 +1,22 @@
 * {
-  box-sizing: content-box;
+  box-sizing: border-box;
   text-decoration: none;
 }
 
-html, body {
+body {
+  width: 100%;
+  width: 100%;
   margin: 0;
-  padding: 0;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
 #app {
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
   display: flex;
 	flex-direction: column;
+  padding: var(--spacing-s);
 }
 
 
@@ -25,10 +29,8 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 760px;
-    margin-left: 24px;
-    margin-right: 12px;
-
+    padding-left: var(--spacing-l);
+    padding-right: var(--spacing-s);
   }
 
   &__bottom {
@@ -41,7 +43,6 @@ html, body {
 
   &__list {
     display: flex;
-
   }
 
   &__logo {
@@ -137,7 +138,10 @@ html, body {
 
 .menu {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   opacity: 0;
   background-color: white;
   cursor: default;
@@ -150,8 +154,7 @@ html, body {
     bottom: var(--nav-height);
     left: 0;
     right: 0;
-    margin: 5px;
-    padding: 0;
+    padding: 5px;
 
     transform: translateY(60px);
 
@@ -166,7 +169,7 @@ html, body {
     text-decoration: none;
     border-bottom: 1px solid var(--divider-light-1);
     list-style: none;
-    margin: 5px 25px;
+    margin: var(--spacing-xs) var(--spacing-l);
 
     transition: transform .4s;
 
@@ -258,5 +261,12 @@ html, body {
 
   --nav-height: 55px;
   --logo-height: 24px;
+
+
+  --spacing-xs: 4px;
+  --spacing-s: 8px;
+  --spacing-m: 16px;
+  --spacing-l: 24px;
+  --spacing-xl: 32px;
 }
 
